# venezuela-earthquake-impact

./: .gitignore  LICENSE  README.md  WB-IGO-RIDER.md  pyproject.toml
docs/: _config.yml  _toc.yml  team.md
notebooks/earthquake-region/: earthquake_intensity.ipynb
notebooks/network-coverage/: network_coverage.ipynb
