[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "venezuela-earthquake-impact"
description = "A Python package for analyzing the impact of the Venezuela earthquake"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["venezuela-earthquake-impact", "earthquake", "reproducibility"]
authors = [{ name = "Development Data Group", email = "datalab@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = [
	"bokeh>=3,<4",
	"requests>=2.28.1",
	"pandas>=2",
	"pycountry>=22.3.5",
]
[project.optional-dependencies]
docs = [
	"docutils==0.23", # pinned to docutils==0.23 due to https://github.com/worldbank/template/issues/60. See also: https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/worldbank/venezuela-earthquake-impact"
"Bug Reports" = "https://github.com/worldbank/venezuela-earthquake-impact/issues"
"Source" = "https://github.com/worldbank/venezuela-earthquake-impact"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,Nd"

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/template"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
